sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: not found: value getValeurNombre
  } while (pos!=getValeurNombre()-1)
                ^